caffeine_lang/test/caffeine_lang/corpus/frontend/parser/errors/refinement_type_mismatch.caffeine
_bad_type (Type): String { x | x in { "valid", 10 } }

Blueprints
  "test" success_rate(x):
    Requiring { env: _bad_type }
    signals { value: "x" }
